# LangGraph_Tutorial

./: .gitignore  BASICS.md  README.md  pyproject.toml
chatbot/: 01.Basic Chatbot.ipynb  02.Basic Chatbot with Memory.ipynb  03.Persistance.ipynb  04.Persistance Fault Tolerance.ipynb  05.Persistance Time Travel.ipynb  README.md
chatbot with ui/: README.md
chatbot with ui/Observability/: langgraph_backend.py  streamlit_frontend.py
chatbot with ui/Sqlite DataBase/: langgraph_backend.py  streamlit_with_database.py
chatbot with ui/Tools/: langgraph_backend.py  streamlit_frontend.py  tools.ipynb
chatbot with ui/basic/: langgraph_backend.py  streamlit_frontend.py
chatbot with ui/resume Chat/: langgraph_backend.py  streamlit_resume_chat.py
chatbot with ui/streaming/: langgraph_backend.py  streamlit_frontend_streaming.py
notebooks/: 01.LangGraph Basics.ipynb  02.Basic Sequential Workflow.ipynb  03.Prompt Chaining.ipynb  04.Parallel Workflow.ipynb  05.UPSC Essay Parallel Workflow.ipynb  06.Conditional Workflow.ipynb  07.Review Reply Conditional.ipynb  08.Iterative Workflow.ipynb  README.md
